<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <include
        layout="@layout/activity_title_bar"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bar_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:background="@color/app_title_color"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@color/app_title_color"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/home_iv_scarn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="22dip"
                    android:layout_height="22dip"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@mipmap/icon_scean_01" />
            </LinearLayout>

            <TextView
                android:id="@+id/home_tv_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mainactivity_title_string"
                android:textColor="@color/baise"
                android:textSize="19sp" />

            <LinearLayout
                android:id="@+id/home_iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_more_icon"
                    android:layout_width="22dip"
                    android:layout_height="22dip"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/ic_add_user" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/gps_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_3"
        android:visibility="gone">


        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gps_title_string"
            android:textColor="@color/witle"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_container"
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/tab_line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/navibarSize"
        android:background="@color/witle"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/tv_home_lin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="@dimen/dp_26"
                android:layout_height="@dimen/dp_26"
                android:background="@mipmap/v_home_press1"
                android:gravity="center"
                android:textSize="@dimen/tab_textSize" />

            <TextView
                android:id="@+id/tv_home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@drawable/sel_tab_color"
                android:textSize="@dimen/tab_textSize" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_msg"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_msg"
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:background="@mipmap/v_home_msg1"
                    android:gravity="center"
                    android:textSize="@dimen/tab_textSize" />

                <TextView
                    android:id="@+id/tv_msg_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/msg"
                    android:textColor="@drawable/sel_tab_color"
                    android:textSize="@dimen/tab_textSize" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_msg_num"
                android:layout_width="@dimen/dp_14"
                android:visibility="invisible"
                android:layout_height="@dimen/dp_14"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="27dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/bt_red_dp7"
                android:gravity="center"
                android:text=""
                android:textColor="@color/witle"
                android:textSize="@dimen/sp_8" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_task"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_stats"
                    android:layout_width="@dimen/dp_26"
                    android:layout_height="@dimen/dp_26"
                    android:background="@mipmap/v_home_task"
                    android:gravity="center"
                    android:textSize="@dimen/tab_textSize" />

                <TextView
                    android:id="@+id/tv_stats_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/follow"
                    android:textColor="@drawable/sel_tab_color"
                    android:textSize="@dimen/tab_textSize" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_task_num"
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_14"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="27dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/bt_red_dp7"
                android:gravity="center"
                android:text=""
                android:visibility="invisible"
                android:textColor="@color/witle"
                android:textSize="@dimen/sp_8" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/tv_user_lin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="@dimen/dp_26"
                android:layout_height="@dimen/dp_26"
                android:background="@mipmap/v_home_user1"
                android:gravity="center"
                android:textSize="@dimen/tab_textSize" />

            <TextView
                android:id="@+id/tv_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user"
                android:textColor="@drawable/sel_tab_color"
                android:textSize="@dimen/tab_textSize" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>