<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/bar_lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:background="@color/app_title_color"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_title_color"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8">

            <LinearLayout
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="22dip"
                    android:layout_height="19dip"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/back_selector_01" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/mainactivity_title_string"
                    android:textColor="@color/baise"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tv_type_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/line_date_type_padding"
                    android:text="月"
                    android:textColor="@color/baise"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_type_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:padding="@dimen/line_date_type_padding"
                    android:text="周"
                    android:textColor="@color/baise"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_type_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:gravity="center_vertical"
                    android:padding="@dimen/line_date_type_padding"
                    android:text="日"
                    android:textColor="@color/baise"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_type_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:background="@drawable/bt_witle_01"
                    android:gravity="center_vertical"
                    android:padding="@dimen/line_date_type_padding"
                    android:text="时"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_15"
                    android:background="@drawable/ic_left_01"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_3"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_dt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="--"
                    android:textColor="@color/witle"
                    android:textColorHint="@color/witle"
                    android:textSize="@dimen/sp_13" />

                <TextView
                    android:id="@+id/tv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_15"
                    android:background="@drawable/ic_right_01"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_3"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/tv_quert"
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_marginEnd="10dip"
                    android:background="@drawable/bt_witle_01"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:text="@string/request"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_Reset"
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_marginEnd="10dip"
                    android:background="@drawable/bt_witle_01"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_10"
                    android:text="重置"
                    android:textColor="@color/app_title_color"
                    android:textSize="@dimen/sp_12" />
                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="wrap_content"
                    android:layout_height="25dip"
                    android:layout_marginEnd="10dip"
                    android:background="@drawable/edittext_input"
                    android:gravity="center_vertical"
                    android:hint="@string/dismiss_list"
                    android:paddingRight="@dimen/dp_5"
                    android:textColor="@color/witle"
                    android:textColorHint="@color/witle"
                    android:textSize="@dimen/sp_12" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_more_icon"
                    android:layout_width="18dip"
                    android:layout_height="18dip"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:background="@drawable/icon_list_01" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/spread_line_chart"
                android:paddingLeft="@dimen/dm005"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />


            <LinearLayout
                android:id="@+id/chart_lable_lin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dm050"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dp_3">

                <TextView
                    android:id="@+id/chart_lable0"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:text="1"
                    android:textSize="@dimen/sp_8"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/dp_5"
                    android:textColor="@color/white"
                    android:background="@color/data_chat_1"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/chart_lable_text0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_2"
                    android:text="lable0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/chart_lable1"
                    android:layout_width="@dimen/dp_10"
                    android:text="2"
                    android:textSize="@dimen/sp_8"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_height="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_8"
                    android:background="@color/data_chat_2"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/chart_lable_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_2"
                    android:text="lable1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/chart_lable2"
                    android:text="3"
                    android:textSize="@dimen/sp_8"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_8"
                    android:background="@color/data_chat_3"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/chart_lable_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_2"
                    android:text="lable2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/chart_lable3"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:text="4"
                    android:textSize="@dimen/sp_8"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/dp_8"
                    android:background="@color/data_chat_4"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/chart_lable_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_2"
                    android:text="lable2"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/chart_lable4"
                    android:text="5"
                    android:textSize="@dimen/sp_8"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="@dimen/dp_10"
                    android:layout_height="@dimen/dp_10"
                    android:layout_marginStart="@dimen/dp_8"
                    android:background="@color/data_chat_5"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/chart_lable_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_2"
                    android:text="lable2"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/recyclerview_lin"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"
            android:layout_weight="1"
            android:background="@drawable/bt_gray_border_01"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/tv_close"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mainColor"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dip"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dm028"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="@dimen/dm008"
                        android:layout_marginStart="@dimen/dm050"
                        android:text="测点列表"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dip"
                    android:background="@color/tab_line_color"
                    android:gravity="center"
                    android:orientation="vertical" />


            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollbarThumbVertical="@drawable/scrollbar_ver_thumb">

                <RelativeLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>